--- a/_notebooks/2023-01-22-66mcq.ipynb
+++ b/_notebooks/2023-01-22-66mcq.ipynb
@@ -43,6 +43,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Some key learnings\n",
+    "- For-Each loop doesn't have the ability to change the elements in an ArrayList (Java) or arrays (other languages), while for loop does\n",
+    "- If a question asks about compile time error, it's literally impossible for the answer to be multiple lines of code\n",
+    "- Removing an index of an array will shift all of the elements over (ex. remove data[0] then data[1] is now data[0] and so on)\n",
+    "- compareTo() method: returns 0 if strings are equal, returns < 0 if string is less than other string (if comparing characters like \"g\" and \"f\", then \"g\" is lexicographically \"lower\" than \"f\"), returns > 0 if string is more than other string (either more characters or if comparing characters the string that is doing the comparing comes before in the alphabet)\n",
+    "- indexOf() method returns position of the first occurrence of the specified characters in a string <- IMPORTANT \n",
+    "- If a superclass is made with a class that has the same name as it, it doesn't need a return type\n",
+    "- Extends vs. Implements: Extends is used to extend a class's functionality, while Implements is when you are using the elements of a class. {Here is good example: class extends class, class implements interface, interface extends interface}\n",
+    "- Even if a method has void attached to it but has a return statement in its body, it will still compile\n",
+    "- Mutator method changes a private value without returning anything, while Accessor method returns\n",
+    "\n",
+    "- Closing thoughts: look over recursion, 2D arrays, don't think 1-dimensionally on the De'Morgan's Law questions "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Developing Algorithms Using Strings\n",
     "![](my_icons/q17v2.PNG)"
    ]
