--- a/_notebooks/2023-01-22-66mcq.ipynb
+++ b/_notebooks/2023-01-22-66mcq.ipynb
@@ -47,7 +47,7 @@
     "- For-Each loop doesn't have the ability to change the elements in an ArrayList (Java) or arrays (other languages), while for loop does\n",
     "- If a question asks about compile time error, it's literally impossible for the answer to be multiple lines of code\n",
     "- Removing an index of an array will shift all of the elements over (ex. remove data[0] then data[1] is now data[0] and so on)\n",
-    "- compareTo() method: returns 0 if strings are equal, returns < 0 if string is less than other string (if comparing characters like \"g\" and \"f\", then \"g\" is lexicographically \"lower\" than \"f\"), returns > 0 if string is more than other string (either more characters or if comparing characters the string that is doing the comparing comes before in the alphabet)\n",
+    "- compareTo() method: returns 0 if strings are equal, returns < 0 if string is less than other string (if comparing characters like \"g\" and \"f\", then \"g\" is lexicographically \"lower\" than \"f\"), returns > 0 if string is more than other string (either more characters or if comparing characters the string that is doing the comparing comes after in the alphabet)\n",
     "- indexOf() method returns position of the first occurrence of the specified characters in a string <- IMPORTANT \n",
     "- If a superclass is made with a class that has the same name as it, it doesn't need a return type\n",
     "- Extends vs. Implements: Extends is used to extend a class's functionality, while Implements is when you are using the elements of a class. {Here is good example: class extends class, class implements interface, interface extends interface}\n",
