--- a/_notebooks/2023-01-30-52mcq.ipynb
+++ b/_notebooks/2023-01-30-52mcq.ipynb
@@ -35,11 +35,17 @@
     "- Got a little confused with 2D arrays\n",
     "- Need to review For-Each loops\n",
     "- Still need to work on timing, should have taken me a lot less time to finish through these questions \n",
-    "- Kinda funny how almost all of the question I got wrong fell under the topic of \"Traversing 2D Arrays\" or \"Traversing ArrayLists\"\n",
-    "\n",
-    "> Some key resources I want to look at \n",
-    "- https://introcs.cs.princeton.edu/java/11cheatsheet/\n",
-    "- https://www.edureka.co/blog/cheatsheets/java-cheat-sheet/"
+    "- Kinda funny how almost all of the question I got wrong fell under the topic of \"Traversing 2D Arrays\" or \"Traversing ArrayLists\""
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Some key resources I want to look at\n",
+    "> https://introcs.cs.princeton.edu/java/11cheatsheet/\n",
+    "> https://www.edureka.co/blog/cheatsheets/java-cheat-sheet/"
    ]
   },
   {
