--- a/_notebooks/2023-03-12-2015mcq.ipynb
+++ b/_notebooks/2023-03-12-2015mcq.ipynb
@@ -20,6 +20,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "![](my_icons/2015mc.PNG)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "![](my_icons/201518.PNG)"
    ]
   },
