add comparisons and sorts

--- a/_notebooks/2023-04-04-sort.ipynb
+++ b/_notebooks/2023-04-04-sort.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -37,13 +37,15 @@
       "6 \n",
       "7 \n",
       "9 \n",
-      "\n"
+      "comparisons: 11\n",
+      "sorts: 8\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "public class Sorts {\n",
+    "    public int comparisons = 0;\n",
+    "    public int sorts = 0;\n",
     "    public void insertionSort(int numArray[]) {\n",
     "       for (int i = 1; i < numArray.length; i++) {\n",
     "        int key = numArray[i];\n",
@@ -52,15 +54,19 @@
     "        while (j >= 0 && numArray[j] > key) {\n",
     "            numArray[j + 1] = numArray[j];\n",
     "            j = j - 1;\n",
+    "            comparisons++;\n",
     "        }\n",
     "        numArray[j + 1] = key;\n",
+    "        sorts++;\n",
     "       }\n",
     "    }\n",
     "    public void toString(int numArray[]) {\n",
     "        for (int i = 0; i < numArray.length; i++) {\n",
     "            System.out.println(numArray[i] + \" \");\n",
     "        }\n",
-    "        System.out.println();\n",
+    "        System.out.println(\"comparisons: \" + comparisons);\n",
+    "        System.out.println(\"sorts: \" + sorts);\n",
+    "        \n",
     "    }\n",
     "    public static void main(String args[]) {\n",
     "        int[] numArray = {5, 2, 4, 3, 1, 5, 9, 7, 6};\n",
