--- a/_notebooks/2023-04-04-sort.ipynb
+++ b/_notebooks/2023-04-04-sort.ipynb
@@ -38,7 +38,8 @@
       "7 \n",
       "9 \n",
       "comparisons: 11\n",
-      "sorts: 8\n"
+      "sorts: 8\n",
+      "time: 100\n"
      ]
     }
    ],
@@ -66,13 +67,16 @@
     "        }\n",
     "        System.out.println(\"comparisons: \" + comparisons);\n",
     "        System.out.println(\"sorts: \" + sorts);\n",
-    "        \n",
     "    }\n",
     "    public static void main(String args[]) {\n",
     "        int[] numArray = {5, 2, 4, 3, 1, 5, 9, 7, 6};\n",
+    "        long startTime = System.nanoTime();\n",
+    "        long endTime = System.nanoTime();\n",
+    "        long time = endTime - startTime;\n",
     "        Sorts sorts = new Sorts();\n",
     "        sorts.insertionSort(numArray);\n",
     "        sorts.toString(numArray);\n",
+    "        System.out.println(\"time: \" + time);\n",
     "    }\n",
     "}\n",
     "Sorts.main(null);"
