--- a/_notebooks/2023-04-04-sort.ipynb
+++ b/_notebooks/2023-04-04-sort.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "java"
@@ -38,7 +38,7 @@
       "7 \n",
       "9 \n",
       "comparisons: 11\n",
-      "sorts: 8\n",
+      "sorts: 5008\n",
       "time: 100\n"
      ]
     }
@@ -61,6 +61,13 @@
     "        sorts++;\n",
     "       }\n",
     "    }\n",
+    "    public static int[] randomArray() {\n",
+    "        int[] array = new int[5001];\n",
+    "        for (int i = 0; i < array.length; i++) {\n",
+    "            array[i] = (int) (Math.random());\n",
+    "        }\n",
+    "        return array;\n",
+    "    }\n",
     "    public void toString(int numArray[]) {\n",
     "        for (int i = 0; i < numArray.length; i++) {\n",
     "            System.out.println(numArray[i] + \" \");\n",
@@ -73,8 +80,11 @@
     "        long startTime = System.nanoTime();\n",
     "        long endTime = System.nanoTime();\n",
     "        long time = endTime - startTime;\n",
+    "        int[] arr = randomArray();\n",
     "        Sorts sorts = new Sorts();\n",
     "        sorts.insertionSort(numArray);\n",
+    "        sorts.insertionSort(arr);\n",
+    "        // sorts.toString(arr);\n",
     "        sorts.toString(numArray);\n",
     "        System.out.println(\"time: \" + time);\n",
     "    }\n",
