--- a/_notebooks/2023-04-26-rmr-hw.ipynb
+++ b/_notebooks/2023-04-26-rmr-hw.ipynb
@@ -26,11 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -77,11 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -115,11 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -163,11 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -207,11 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -256,11 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -305,11 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -322,7 +294,7 @@
    "source": [
     "String[][] people = {\n",
     "    {\"Jun, Rohit, Nathan, \"},\n",
-    "    {\"Ellen, Iris, Bailey, Don, Hetvi, \"},\n",
+    "    {\"Ellen, Iris, Bailey, Don, Hetvi, Evan, \"},\n",
     "    {\"Sahil, Samuel, Everitt, \"}\n",
     "};\n",
     "for (int row = 0; row < people.length; row++) {\n",
@@ -344,11 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -401,11 +369,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -451,11 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -504,11 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -632,7 +588,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "Java",
+   "name": "java",
    "pygments_lexer": "java",
    "version": "11.0.16+8-post-Ubuntu-0ubuntu120.04"
   },
