--- a/_notebooks/2023-04-26-rmr-hw.ipynb
+++ b/_notebooks/2023-04-26-rmr-hw.ipynb
@@ -583,7 +583,7 @@
     "    }\n",
     "    public void removeOddElements() {\n",
     "        for (int i = 0; i < seatingChart.size(); i ++) {\n",
-    "            seatingChart.remove(seatingChart.get(i));\n",
+    "            seatingChart.remove(seatingChart.get(i)); //this is why removeAll() exists\n",
     "        }\n",
     "    }\n",
     "    public void printArrayList() {\n",
